--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
+  "homepage": "https://github.com/slong1337/todo-list-project",
   "scripts": {
-    "build": "remix vite:build",
+    "predeploy": "npm run build",  
+    "deploy": "gh-pages -d build", 
+    "build": "vite build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
@@ -36,7 +39,8 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "gh-pages": "^5.0.0"
   },
   "engines": {
     "node": ">=20.0.0"
